memperbaiki modal, sekarang modal sudah bisa muncul dan bisa close apabila di klik sembarang tempat. Selesai slicing UI untuk search box, produk, shopping cart, dan detail menggunakan modal box

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="product-card">
           <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
+            <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
           </div>
           <div class="product-image">
             <img src="img/Products/1.jpg" alt="Produk 1">
@@ -176,7 +176,7 @@
         <div class="product-card">
           <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
+            <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
           </div>
           <div class="product-image">
             <img src="img/Products/1.jpg" alt="Produk 1">
@@ -244,7 +244,7 @@
     <!-- Modal Box Item Detail -->
     <div class="modal" id="item-detail-modal">
       <div class="modal-container">
-        <a href="" class="close-icon"><i data-feather="x"></i></a>
+        <a href="#" class="close-icon"><i data-feather="x"></i></a>
         <div class="modal-content">
           <img src="img/Products/1.jpg" alt="Produk 1">
           <div class="product-content">
