menambahkan css masking pada hero section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <main class="content">
         <h1>Seduh Secangkir <span>Kopi</span></h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, dolorem!</p>
-        <a href="#" class="cta">Beli Sekarang</a>
+        <!-- <a href="#" class="cta">Beli Sekarang</a> -->
       </main>
     </section>
 
